# django-auth-example

./: pyproject.toml
loginTest/: asgi.py  settings.py  urls.py  wsgi.py
loginTest/myApp/: admin.py  apps.py  models.py  serializers.py  views.py
loginTest/myApp/migrations/: 0001_initial.py
templates/myApp/: item_list.html
templates/registration/: login.html
